--- a/index.html
+++ b/index.html
@@ -37,8 +37,17 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          </div>
-        </div>
+            <a href="index.html" class="navbar-brand">Responsive Theme</a>
+          </div> <!-- /navbar-header -->
+
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="">Latest News</a></li>
+            </ul>
+          </div> <!-- /navbar-collapse -->
+        </div> <!-- /container fluid -->
       </nav>
     </header>
     <h1>Hello, world!</h1>
