finish header section including centering main feature title

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <![endif]-->
   </head>
   <body>
+
+    <!-- === HEADER === -->
     <header>
       <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -49,6 +51,17 @@
           </div> <!-- /navbar-collapse -->
         </div> <!-- /container fluid -->
       </nav>
+
+      <!-- === FEATURE SECTION === -->
+      <div class="container-fluid">
+        <div class="row feature">
+          <img src="images/landingPage.jpeg" alt="walking men background">
+          <div class="feature-text col-xs-12 col-md-8 col-lg-6 col-md-offset-2 col-lg-offset-3">
+            <p>FULLY RESPONSIVE THEME <br> FOR WORDPRESS.</p>
+          </div> <!-- /feature text -->
+        </div> <!-- /row -->
+      </div> <!-- /container fluid -->
+
     </header>
     <h1>Hello, world!</h1>
 
