add welcome section including styling it

--- a/index.html
+++ b/index.html
@@ -63,7 +63,46 @@
       </div> <!-- /container fluid -->
 
     </header>
-    <h1>Hello, world!</h1>
+
+      <!-- === WELCOME SECTION === -->
+      <section id="welcome">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+              <h2> Welcome to Responsive Theme </h2>
+              <img src="images/divider-purple.png" alt="divider">
+            </div> <!-- /col -->
+          </div><!-- /row -->
+
+          <div class="row facilities">
+            <div class="col-sm-3">
+              <a href="">
+                <img src="images/makeup.png" alt="hair and makeup"> Hair &amp; Make Up
+              </a>
+            </div><!-- /col -->
+
+            <div class="col-sm-3">
+              <a href="">
+                <img src="images/candles.png" alt="Spa facilities"> Facilities
+              </a>
+            </div><!-- /col -->
+
+            <div class="col-sm-3">
+              <a href="">
+                <img src="images/lake.png" alt="Lake"> Lakeside Retreat
+              </a>
+            </div><!-- /col -->
+
+            <div class="col-sm-3">
+              <a href="">
+                <img src="images/pool.png" alt="pool"> All Our Services
+              </a>
+            </div><!-- /col -->
+
+          </div> <!-- /row -->
+
+        </div><!-- /container -->
+      </section>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
