--- a/index.html
+++ b/index.html
@@ -98,9 +98,50 @@
                 <img src="images/pool.png" alt="pool"> All Our Services
               </a>
             </div><!-- /col -->
-
           </div> <!-- /row -->
+        </div><!-- /container -->
+      </section>
 
+      <!-- === LATEST OFFERS SECTION === -->
+      <section id="latest-offers">
+        <div class="container">
+          <div class="row margin-bottom">
+            <div class="col-sm-6 col-sm-offset-3">
+              <h2> Latest Offers</h2>
+              <img src="images/divider-silver.png" alt="divider">
+            </div> <!-- /col -->
+          </div><!-- /row -->
+
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="offer">
+                    <span>$60</span>
+                    <h3>FAMILY <br> OFFER</h3>
+                    <p>Family Pool</p>
+                    <p>Great Day Out</p>
+                  </div> <!-- /offer -->
+                </div> <!-- /col-sm-4 -->
+                <div class="col-sm-4">
+                  <div class="offer">
+                    <span>$120</span>
+                    <h3>FOR THE <br> BRIDE</h3>
+                    <p>Hair &amp; Make Up</p>
+                    <p>Full Pamper Package</p>
+                  </div> <!-- /offer -->
+                </div> <!-- /col-sm-4 -->
+                <div class="col-sm-4">
+                  <div class="offer">
+                    <span>$90</span>
+                    <h3>WEEKEND <br> PASS</h3>
+                    <p>Modern Facilities</p>
+                    <p>Perfect Gift</p>
+                  </div> <!-- /offer -->
+                </div> <!-- /col-sm-4 -->
+              </div> <!-- /nested row -->
+            </div> <!-- /col-sm-12 -->
+          </div><!-- /row -->
         </div><!-- /container -->
       </section>
 
