Add shop section styling and temporal image

--- a/index.html
+++ b/index.html
@@ -145,6 +145,20 @@
         </div><!-- /container -->
       </section>
 
+      <!-- === SHOP ONLINE SECTION === -->
+      <section id="shop-online">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 col-sm-offset-3 text-center">
+              <h2> Shop Online </h2>
+              <img src="images/divider-purple.png" alt="divider">
+              <a href="" class="btn btn-default" role="button"> Shop Here </a>
+            </div> <!-- /col -->
+          </div> <!-- /row -->
+        </div> <!-- /container -->
+      </section>
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
