Add footer section and copy right section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,50 @@
         </div> <!-- /container -->
       </section>
 
+      <!-- === FOOTER SECTION === -->
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 col-sm-offset-3 text-center margin-bottom">
+              <h2> Keep in touch </h2>
+              <img src="images/divider-purple.png" alt="divider">
+            </div> <!-- /col -->
+          </div> <!-- /row -->
+          <div class="row">
+            <div class="col-sm-4">
+              <address>
+                Responsive Services <br>
+                Address line 1 <br> 
+                Address line 2 <br>
+                Address line 3 <br>
+              </address>
+            </div>
+            <div class="col-sm-4">
+              <ul>
+                <li><a href="about.html">About</a></li>                
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="">Latest News</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-4">
+              <p>Follow Us:</p>
+              <i class="fa fa-facebook fa-lg"></i>
+              <i class="fa fa-twitter fa-lg"></i>
+              <i class="fa fa-google-plus fa-lg"></i>
+              <i class="fa fa-pinterest fa-lg"></i>
+              <i class="fa fa-youtube fa-lg"></i>
+            </div>
+          </div>
+        </div> <!-- /container -->
+
+        <div class="container-fluid" id="copy">
+          <div class="col-sm-12">
+            <p>&copy; 2016 MinaKilla</p>
+          </div> <!-- /container -->
+        </div> <!-- /col -->
+      </footer>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
