add styling for footer section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="row">
             <div class="col-sm-6 col-sm-offset-3 text-center margin-bottom">
               <h2> Keep in touch </h2>
-              <img src="images/divider-purple.png" alt="divider">
+              <img src="images/divider-silver.png" alt="divider">
             </div> <!-- /col -->
           </div> <!-- /row -->
           <div class="row">
