--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,6 @@
           </div> <!-- /feature text -->
         </div> <!-- /row -->
       </div> <!-- /container fluid -->
-
     </header>
 
       <!-- === CONTACT US SECTION === -->
@@ -85,13 +84,13 @@
               <i class="fa fa-envelope-o"></i> Email:mail@mail.com <br>
               <i class="fa fa-phone"></i>Telephone: 12333444
             </div>
-
             <div class="col-sm-6">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.764994246567!2d-122.39561174832502!3d37.795546879656555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580668cd055bb%3A0x9cbbc099ec82aef7!2sSan+Francisco+Ferry+Bldg%2C+1+Sausalito+-+San+Francisco+Ferry+Bldg%2C+San+Francisco%2C+CA+94111!5e0!3m2!1sen!2sus!4v1457117913849" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
-          <div class="row message-area">
-           <div class="col-sm-12">
+
+          <div class="row">
+           <div class="col-sm-12 message-area">
             <div class="well">
               <form>
                 <p>Send us a message...</p>
@@ -110,7 +109,7 @@
                   <input type="submit" class="btn btn-default" value="Submit">
               </form>
             </div> <!-- /well -->
-           </div> <!-- /col -->
+           </div> <!-- /col-sm-12 -->
           </div> <!-- /row -->
         </div><!-- /container -->
       </section>
