fix centering of content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- === HEADER === -->
     <header>
       <nav class="navbar navbar-default">
-        <div class="container-fluid">
+        <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">Toggle Navigation</span>
@@ -53,7 +53,7 @@
       </nav>
 
       <!-- === FEATURE SECTION === -->
-      <div class="container-fluid">
+      <div class="container">
         <div class="row feature">
           <img src="images/landingPage.jpeg" alt="walking men background">
           <div class="feature-text col-xs-12 col-md-8 col-lg-6 col-md-offset-2 col-lg-offset-3">
